--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^5.2.4"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
